--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@prisma/client": "^2.17.0",
     "apollo-server-express": "^2.21.0",
-    "graphql": "^15.5.0"
+    "bcryptjs": "^2.4.3",
+    "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
